Updated files to TypeScript and cleaned up some issues with the new conversation implementation.

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node ./src/index.js",
-    "chat": "npx tsx ./examples/chat.ts"
+    "chat": "npx tsx ./src/index.ts"
   },
   "keywords": [],
   "author": "",
