--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "@openai/agents": "^0.4.0",
+    "@braintrust/openai-agents": "^0.1.2",
+    "@openai/agents": "^0.4.1",
+    "braintrust": "^2.0.2",
     "dotenv": "^17.2.3",
+    "ts-node": "^10.9.2",
     "zod": "^4.3.5"
   }
 }
